--- a/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Login/Login.cshtml
@@ -40,10 +40,10 @@
                         <input type="password" class="form-control" asp-for="Password" class="border-0 form-control mb-1 pr-4 bottom-border" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                    <label class="size-14 p-2" for="session-check">
+                    @*<label class="size-14 p-2" for="session-check">
                         Mantener la sesión iniciada
                         <input class="float-left mr-1" id="session-check" type="checkbox" name="mantenerSesionIniciada" />
-                    </label>
+                    </label>*@
                     <div class="form-group">
                         @*<button type="submit" class="btn btn-info form-control">Iniciar Sesión</button>*@
                         <button type="submit" class="w-100 btn btn-primary btn-center mt-1">Iniciar sesión</button>
