--- a/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label class="col-3 col-form-label size-12 text-uppercase">Tipo de unidad</label>
+                        <label class="col-3 col-form-label size-12 text-uppercase">Tipo de servicio</label>
                         <div class="col-9">
                             <input type="text" class="form-control" id="tipodeunidad" disabled>
                         </div>
@@ -221,7 +221,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <table id="table" class="table table-striped table-bordered display table-hover table-monitoreo" width="100%">
+                        <table id="table" class="table table-striped table-bordered display table-hover" width="100%">
                             <thead>
                                 <tr>
                                     <th>CHECKPOINT</th>
@@ -232,10 +232,7 @@
                                     <th></th>
                                 </tr>
                             </thead>
-                            <tbody id="table-checkpoint-info">
-                                <tr>
-                                    <td colspan="8">Cargando....</td>
-                                </tr>
+                            <tbody id="table-checkpoints-info">
                             </tbody>
                         </table>
                     </div>
@@ -286,7 +283,8 @@
                 const data = await response.json();
                 if (data) {
                     $(e)[0].reset();
-                    Table.draw();
+                    //Table.draw();
+                    DT();
                     $('#comentarioModal').modal('hide');
                 }
             } catch (e) {
@@ -331,7 +329,8 @@
             try {
                 const response = await fetch(`/Tracking/GetDetails?SectionId=${SectionId}`);
                 const data = await response.json();
-                const { transportista, conductor, origen, destino, tipoDeUnidad, telefono } = data;
+                const { folio, transportista, conductor, origen, destino, tipoDeUnidad, telefono } = data;
+                $('#sectiondetailLabel').html(`VIAJE: ${folio}`);
                 $('#transportista').val(transportista);
                 $('#conductor').val(conductor);
                 $('#origen').val(origen);
@@ -434,7 +433,7 @@
                         render: (data, type, row) => {
                             const { hasCheckpoints, sectionId, checkpoint, rutaId, fechaSalida } = row;
                             let html = `<a href="javascript:void(0)" onclick="$('#comentarioModal').modal('show'), $('[name=SectionId]').val(${sectionId})"><span class="material-icons">control_point</span></a>`;
-                            html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="verCheckpoint(${sectionId},${rutaId},'${fechaSalida}');"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
+                            html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="GetCheckpoints(${rutaId})"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
                             return html;
                         }
                     }
@@ -451,120 +450,20 @@
             });
         }
 
-        function verCheckpoint(idviaje, idruta, fechasalida) {
-            console.log(fechasalida);
-            var catCheckpoints = [];
-            var catSecChecpoints = [];
-            var horaOriginal = 0;
-            var horaOriginal1 = 0;
-            var fechaSalidaView = ``;
-
-            //Dos variables para la validacion de fechas de hora esperada
-            var horaEsperadaView = ``; //La hora esperada que se mostrara en la tabla
-            var horaEsperadaView1 = ``; //La hora esperada que se mostrara en la tabla
-            var banderaHoraEsperada = 0;
-            //Inicio checpoints
-            $.get("/Monitoring/getCheckpoints/" + idruta, function (res) {
-                catCheckpoints = res;
-                //Obtener los checkpoints de las secciones
-                $.get("/Monitoring/getSCheckpoints/" + idviaje, function (resCheck) { //Seccion
-                    catSecChecpoints = resCheck;
-                    $("#table-checkpoint-info").empty();//Vaciar la tabla de registros de checkpoints
-                    var trInfo = `<tr>`;
-                    var i = 0;
-                    var colorCheck = "green";
-                    //Recorrer catalogo catSecChecpoints
-                    $.each(catCheckpoints, function (item, key) {
-                        i++;
-                        horaOriginal = horaOriginal + key.tiempo;
-                        horaOriginal1 = horaOriginal1 + key.tiempo;
-
-                        fechaSalidaView = moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss'); //Siempre va
-                        var hReal, createdBy, btnActive, hEsperada = ``;
-                        let indice = catSecChecpoints.findIndex(service => service.idCheckpoint == key.id);
-
-                        if (indice >= 0) {
-                            banderaHoraEsperada = 1;
-                            //Aqui ya tenemos una hora real
-                            hReal = `<td>${moment(catSecChecpoints[indice].horaReal).format('YYYY-MM-DD hh:mm:ss')}</td>`;
-                            createdBy = `<td>${catSecChecpoints[indice].createdBy}</td>`;
-                            btnActive = `<td><button class="btn btn-sm" disabled="disabled"><span class="material-icons">save</span></button></td>`;
-                            horaOriginal1 = 0;
-                            horaEsperadaView = catSecChecpoints[indice].horaReal;
-                        } else {
-                            hReal = `<td><input type="datetime-local" class="form-control form-control-sm" id="horaReal-${idviaje}"></td>`;
-                            createdBy = `<td></td>`;
-                            btnActive = `<td>
-                                                <button class="btn btn-sm" onclick="saveCheckpoint(${idviaje},${key.id},${idruta},'${fechasalida}');">
-                                                    <span class="material-icons">save</span>
-                                                </button>
-                                            </td>`;
-                        }
-
-                        if (parseInt(i) <= 1) {
-                            hEsperada = `<td>${moment(fechasalida).add(horaOriginal, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
-                        } else {
-                            if (banderaHoraEsperada == 0) {
-                                hEsperada = `<td>${moment(fechasalida).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss')}</td>`;
-                            } else {
-                                if (horaOriginal1 == 0) {
-                                    let horadif = moment(horaEsperadaView1).diff(fechaSalidaView, 'minutes');
-                                    horadif = horadif * 1;
-
-                                    //if (horadif >= 1) {
-                                    //    colorCheck = "red";
-                                    //}
-
-                                    let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss');
-                                    let horaEsp = moment(fecha).add(key.tiempo, 'hours').format('YYYY-MM-DD hh:mm:ss');
-                                    console.log(moment(fechaSalidaView).isAfter(horaEsp));
-                                    //if (moment(fechaSalidaView).diff(horaEsp) > 1) {
-                                    //    colorCheck = "red";
-                                    //}
-                                    if (moment(horaEsp).isAfter(fechaSalidaView)) {
-                                        colorCheck = "red";
-                                    }
-                                    hEsperada = `<td>${horaEsp}</td>`;
-                                } else {
-                                    let horadif = moment(horaEsperadaView).diff(fechaSalidaView, 'minutes');
-                                    horadif = horadif * 1;
-
-                                    //if (horadif >= 1) {
-                                    //    colorCheck = "red";
-                                    //}
-
-                                    let fecha = moment(fechaSalidaView).add(horadif, 'minutes').format('YYYY-MM-DD hh:mm:ss')
-                                    let horaEsp = moment(fecha).add(horaOriginal1, 'hours').format('YYYY-MM-DD hh:mm:ss');
-
-                                    //if (moment(fechaSalidaView).diff(horaEsp) > 1) {
-                                    //    colorCheck = "red";
-                                    //}
-                                    if (moment(horaEsp).isAfter(fechaSalidaView)) {
-                                        colorCheck = "red";
-                                    }
-
-                                    hEsperada = `<td>${horaEsp}</td>`;
-                                }
-                            }
-                        }
-
-                        trInfo += `<td> <div style="height:10px;width:10px;background:${colorCheck};-moz-border-radius:50px;-webkit-border-radius:50px;border-radius:50px;display: inline-block;"></div> ${key.checkpoint}</td>`;
-                        trInfo += `<td>${fechaSalidaView}</td>`;
-                        trInfo += hEsperada + hReal + createdBy + btnActive + `</tr>`;
-
-                        //Fin pintar tabla
-                        if (indice >= 0) {
-                            horaEsperadaView1 = catSecChecpoints[indice].horaReal;
-                        }
-
-                    });
-                    $("#table-checkpoint-info").append(trInfo);
-                    //Fin recorrer catalogo catSecChecpoints
+        const GetCheckpoints = async RouteId => {
+            try {
+                const response = await fetch(`/Tracking/GetCheckpoints?RouteId=${RouteId}`);
+                const data = await response.json();
+                console.log(data);
+                let html = ``;
+                data.map(({ id, nombre, tiempo }) => {
+                    html += `<tr><td>${nombre}</td><td>${tiempo}</td><td>hora esperada</td><td>hora real</td><td>usuario</td><td>+</td></tr>`;
                 });
-                //Obtener los checkpoints de las secciones
-            });
-            //Fin checkpoints
-            $("#checkpointModal").modal("show");
+                $('#table-checkpoints-info').html(html);
+                $('#checkpointModal').modal('show');
+            } catch (e) {
+                console.error(e);
+            }
         }
     </script>
 }
