--- a/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Operators/Index.cshtml
@@ -97,7 +97,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="">Número de teléfono</label>
-                                <input type="text" class="form-control" name="NoTelefono" id="NoTelefono" maxlength="10" required/>
+                                <input type="text" pattern="\d*" maxlength="10" class="form-control" name="NoTelefono" id="NoTelefono" maxlength="10" required/>
                             </div>
                         </div>
                         <div class="col-md-4">
