--- a/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
@@ -29,7 +29,7 @@
             <h3>MONITOREO</h3>
         </div>
         <div class="w-75 d-flex flex-row justify-content-end">
-            <div class="card text-center w-25 mr-3 custom-filter" onclick="DT()">
+            <div class="card text-center w-25 mr-3 custom-filter" onclick="$('#status, #substatuses').val(0).selectpicker('render'), DT()">
                 <div class="card-body size-12">
                     <b>@Model.Todos</b>
                     <p class="text-light-grey">TODOS</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-3">
                     <label class="form-label size-14">ESTATUS</label>
-                    <select asp-items="Model.Selects.Statuses" class="form-select" onchange="DT(null, 'status', true, this.value), GetSubstatuses(this.value)" style="width: 100%;" data-live-search="true"></select>
+                    <select asp-items="Model.Selects.Statuses" id="status" class="form-select" onchange="DT(null, 'status', true, this.value), GetSubstatuses(this.value)" style="width: 100%;" data-live-search="true"></select>
                 </div>
                 <div class="col-3">
                     <label class="form-label size-14">SUBESTATUS</label>
@@ -283,13 +283,17 @@
                 const data = await response.json();
                 if (data) {
                     $(e)[0].reset();
-                    //Table.draw();
-                    DT();
+                    setTimeout(() => ClearIntervals(), Table.draw(), 3000);
                     $('#comentarioModal').modal('hide');
                 }
             } catch (e) {
                 console.error(e);
             }
+        }
+
+        const ClearIntervals = () => {
+            for (var i = 10; i < 99999; i++)
+                window.clearInterval(i);
         }
 
         function descargarExcel() {
@@ -405,7 +409,7 @@
 
                             const countDownDate = new Date(siguienteContacto).getTime();
 
-                            let countdown = setInterval(() => {
+                            let countdown = window.setInterval(() => {
                                 const now = new Date().getTime();
                                 const distance = countDownDate - now;
                                 const isDelayed = distance < 0;
@@ -415,7 +419,7 @@
                                 const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)).toString().padStart(2, '0').replace('-', '');
                                 const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-                                const countDown = `${isDelayed ? 'DEMORADO:' : ''} ${days}d ${hours}:${minutes}:${seconds.toString().padStart(2, '0').replace('-', '')}`;
+                                const countDown = `${isDelayed ? 'DEMORADO:' : 'PENDIENTE:'} ${days}d ${hours}:${minutes}:${seconds.toString().padStart(2, '0').replace('-', '')}`;
                                 const html = `<p>SIGUIENTE CONTACTO EN:<br> <b ${isDelayed ? 'class="text-danger"' : ''}>${countDown}</b></p><p>ETA: ${eta}</p> <p>GRUPO MONITOR: ${grupoMonitor}</p>`;
                                 $(`#timer${sectionId}`).empty().html(html);
                             }, 1000);
