--- a/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Tracking/Index.cshtml
@@ -58,20 +58,24 @@
 
     <div class="card">
         <div class="card-body">
-            <div class="row mb-3">
-                <div class="col-3">
-                    <label class="form-label size-14">CLIENTE</label>
+            <div class="d-flex flex-row justify-content-around">
+                <div class="w-25">
+                    <label class="form-label size-14">CLIENTE</label><br />
                     <select asp-items="Model.Selects.Customers" multiple="multiple" name="customers[]" class="form-select" onchange="DT(null, this)" style="width: 100%;" data-selected-text-format="count" data-live-search="true"></select>
                 </div>
-                <div class="col-3">
-                    <label class="form-label size-14">ESTATUS</label>
+                <div class="w-25">
+                    <label class="form-label size-14">ESTATUS</label><br />
                     <select asp-items="Model.Selects.Statuses" id="status" class="form-select" onchange="DT(null, 'status', true, this.value), GetSubstatuses(this.value)" style="width: 100%;" data-live-search="true"></select>
                 </div>
-                <div class="col-3">
+                <div class="w-25">
                     <label class="form-label size-14">SUBESTATUS</label>
                     <select id="substatuses" class="form-select" onchange="DT(null, 'substatus', true, this.value)" style="width: 100%;" data-live-search="true"></select>
                 </div>
-                <div class="col-3 my-auto">
+                <div class="w-25">
+                    <label class="form-label size-14">MONITOREO</label>
+                    <select id="monitor" class="form-select" onchange="DT(this.value)" style="width: 100%;" data-live-search="true"></select>
+                </div>
+                <div class="w-25 my-auto">
                     <input type="text" class="form-control" onkeyup="DT(this.value)" placeholder="BUSCAR">
                 </div>
                 @*<div class="col-1 my-auto">
@@ -126,7 +130,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <label>COMENTARIO</label>
-                            <textarea class="form-control text-uppercase" rows="6" name="comment" required></textarea>
+                            <textarea class="form-control text-uppercase" rows="6" name="comment"></textarea>
                         </div>
                     </div>
                     <div class="row">
@@ -209,7 +213,7 @@
 </div>
 
 @*Checkpoints*@
-<div class="modal fade" id="checkpointModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="checkpointsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -241,6 +245,44 @@
         </div>
     </div>
 </div>
+
+
+@*Checkpoints*@
+<div class="modal fade" id="checkpointModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">CHECKPOINTS</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <table id="table" class="table table-striped table-bordered display table-hover table-monitoreo" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>CHECKPOINT</th>
+                                    <th>HORA ORIGINAL</th>
+                                    <th>HORA ESPERADA</th>
+                                    <th>HORA REAL</th>
+                                    <th>USUARIO</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody id="table-checkpoint-info">
+                                <tr>
+                                    <td colspan="8">Cargando....</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 @*Checkpoints*@
 
 @section Scripts{
@@ -258,6 +300,7 @@
         $(() => {
             $('select').selectpicker();
             DT();
+            GetGrupoMonitor();
         })
 
         const GetSubstatuses = async (StatusId, isComment = false) => {
@@ -282,6 +325,7 @@
                 const response = await fetch('/Tracking/AddSectionComment', params);
                 const data = await response.json();
                 if (data) {
+                    GetGrupoMonitor();
                     $(e)[0].reset();
                     setTimeout(() => ClearIntervals(), Table.draw(), 3000);
                     $('#comentarioModal').modal('hide');
@@ -419,7 +463,7 @@
                                 const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)).toString().padStart(2, '0').replace('-', '');
                                 const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-                                const countDown = `${isDelayed ? 'DEMORADO:' : 'PENDIENTE:'} ${days}d ${hours}:${minutes}:${seconds.toString().padStart(2, '0').replace('-', '')}`;
+                                const countDown = `${isDelayed ? 'DEMORADO:' : 'PENDIENTE:'} ${isDelayed ? '00' : days}d ${hours.padStart(2, '0').replace('-', '')}:${minutes.padStart(2, '0').replace('-', '')}:${seconds.toString().padStart(2, '0').replace('-', '')}`;
                                 const html = `<p>SIGUIENTE CONTACTO EN:<br> <b ${isDelayed ? 'class="text-danger"' : ''}>${countDown}</b></p><p>ETA: ${eta}</p> <p>GRUPO MONITOR: ${grupoMonitor}</p>`;
                                 $(`#timer${sectionId}`).empty().html(html);
                             }, 1000);
@@ -435,9 +479,10 @@
                     },
                     {
                         render: (data, type, row) => {
-                            const { hasCheckpoints, sectionId, checkpoint, rutaId, fechaSalida } = row;
-                            let html = `<a href="javascript:void(0)" onclick="$('#comentarioModal').modal('show'), $('[name=SectionId]').val(${sectionId})"><span class="material-icons">control_point</span></a>`;
-                            html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="GetCheckpoints(${rutaId})"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
+                            const { hasCheckpoints, sectionId, checkpoint, rutaId, exitDate } = row;
+                            let html = `<a href="javascript:void(0)" onclick="$('#comentarioModal').modal('show'), $('[name=SectionId]').val(${sectionId}), GetSectionStatus(${sectionId})"><span class="material-icons">control_point</span></a>`;
+                            html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="verCheckpoint(${sectionId},${rutaId},'${exitDate}');"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
+                            //html += hasCheckpoints ? `<a href="javascript:void(0)" class="d-flex flex-column text-danger" onclick="GetCheckpoints(${rutaId})"><span class="material-icons">assistant_photo</span>${checkpoint}</a> ` : '';
                             return html;
                         }
                     }
@@ -468,6 +513,44 @@
             } catch (e) {
                 console.error(e);
             }
+        }
+
+        const GetGrupoMonitor = async () => {
+            try {
+                const response = await fetch(`/Tracking/GetGrupoMonitor`);
+                const data = await response.json();
+                let html = `<option disabled="disabled" selected="selected" value="0">NO HAY SELECCIÓN</option>`;
+                data.map(x => html += `<option value=${x}>${x}</option>`);
+                $('#monitor').html(html).selectpicker('refresh');
+            } catch (e) {
+                console.error(e);
+            }
+        }
+
+        const GetSectionStatus = async SectionId => {
+            try {
+                const response = await fetch(`/Tracking/GetDetails?SectionId=${SectionId}`);
+                const data = await response.json();
+                const { statusId, substatusId } = data;
+                $('[name=statusid]').val(statusId).trigger('change').selectpicker('refresh');
+                setTimeout(() => $('[name=substatusid]').val(substatusId).trigger('change'), 500);
+            } catch (e) {
+                console.error(e);
+            }
+        }
+
+        function verCheckpoint(idviaje, idruta, fechasalida) {
+            $.get(`/Monitor/Checkpoint?idviaje=${idviaje}&idruta=${idruta}&fecha=${fechasalida}`, function (data) {
+                $('#checkpointModal').html(data);
+                $('#checkpointModal').modal('show');
+            });
+        }
+        function saveCheckpoint(idviaje, idcheckpoint, idruta, fechasalida) {
+            var horaReal = $("#horaReal-" + idviaje).val();
+            var jsonData = { "idSection": idviaje, "idCheckpoint": idcheckpoint, "HoraReal": horaReal };
+            $.post("/Monitor/setSCheckpoints", jsonData, function (res) {
+                verCheckpoint(idviaje, idruta, fechasalida);
+            });
         }
     </script>
 }
