*Ofertas fechadisponibilidad bug

--- a/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Offer/Index.cshtml
@@ -401,7 +401,7 @@
                                     estadoD = $("#seleccionaDestino").val();
                                     ciudadD = $("#ciudadDestino").val();
                                 }
-                                var fechaJs = moment($("#txtFechaDisponibilidad").val()).format('YYYY-MM-DD hh:mm:ss') + ".000000";
+                                var fechaJs = moment($("#txtFechaDisponibilidad").val()).format('YYYY-MM-DD HH:mm:ss') + ".000000";
                                 jsonGuardar.push(
                                     {
                                         "id": idEditar,
