--- a/KLS_WEB/KLS_WEB/Views/Catalogs/City/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/City/Index.cshtml
@@ -29,6 +29,7 @@
                     <th>País</th>
                     <th>Estado</th>
                     <th>ID SEPOMEX</th>
+                    <th>Clave SAT</th>
                     <th>Ciudad/Municipio</th>
                     <th>Estatus</th>
                     <th>Acciones</th>
@@ -71,9 +72,13 @@
                         <div class="col-md-4">
                             <label class="">ID SEPOMEX</label>
                             <input type="text" class="form-control" name="id_sepomex" id="id_sepomex" required />
-                        </div>
+                        </div>                       
                     </div>
                     <div class="row">
+                        <div class="col-md-4">
+                            <label class="">Clave SAT</label>
+                            <input type="text" class="form-control" name="ClaveSat" id="claveSat" required maxlength="10" />
+                        </div>
                         <div class="col-md-4">
                             <label class="">Ciudad/Municipio</label>
                             <input type="text" class="form-control" name="nombre" id="nombre" value="" required />
@@ -200,6 +205,7 @@
                     $('#id_estado').trigger('change');
 
                     $("#id_sepomex").val(dataCity[indice].id_sepomex);
+                    $("#claveSat").val(dataCity[indice].claveSat);
                     $("#nombre").val(dataCity[indice].nombre);
 
                     $('#estatus option[value="' + dataCity[indice].estatus + '"]').attr("selected", true);
@@ -227,6 +233,7 @@
                                 <td>${catPais[indice_p].pais}</td>
                                 <td>${catEstado[indice_e].nombre}</td>
                                 <td>${nCon(key.id_sepomex)}</td>
+                                <td>${nCon(key.claveSat)}</td>
                                 <td>${nCon(key.nombre)}</td>
                                 <td>`+ statusTable(key.estatus) + `</td>
                                 <td>
