--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Colonies/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Colonies/Index.cshtml
@@ -40,12 +40,14 @@
                     <table id="table" class="table table-striped table-bordered display table-hover table-viajes no-footer dataTable" width="100%" role="grid" aria-describedby="table_info" style="width: 100%;">
                         <thead>
                             <tr role="row">
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 66px;">ESTADO</th>
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1"style="width: 95px;">CIUDAD MUNICIPIO</th>
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1"  style="width: 143px;">CP</th>
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1"  style="width: 214px;">COLONIA</th>
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1"  style="width: 100px;" aria-sort="ascending">Estatus</th>
-                            <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1"  style="width: 60px;">Acciones</th></tr>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 66px;">ESTADO</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 95px;">CIUDAD MUNICIPIO</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 143px;">CP</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 143px;">Clave SAT</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 214px;">COLONIA</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" style="width: 100px;" aria-sort="ascending">Estatus</th>
+                                <th class="" tabindex="0" aria-controls="table" rowspan="1" colspan="1" style="width: 60px;">Acciones</th>
+                            </tr>
                         </thead>
                         <tbody id="table-info">
                             <tr>
@@ -151,6 +153,10 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
+                            <label class="">Clave SAT</label>
+                            <input type="text" class="form-control" name="ClaveSat" value="" id="claveSat" maxlength="10"/>
+                        </div>
+                        <div class="col-md-4">
                             <label class="">Colonia</label>
                             <input type="text" class="form-control" name="nombre" value="" id="nombre" />
                         </div>
@@ -228,6 +234,7 @@
                 try {
                     let indice = dataColonias.findIndex(service => service.id === idEditar);
                     $("#cp").val(dataColonias[indice].cp);
+                    $("#claveSat").val(dataColonias[indice].claveSat);
                     $("#nombre").val(dataColonias[indice].nombre);
                     $('#id_estado option[value="' + dataColonias[indice].id_estado + '"]').attr("selected", true);
                     $('#estatus option[value="' + dataColonias[indice].estatus + '"]').attr("selected", true);
@@ -460,6 +467,7 @@
                             <td>${catEstado[indice_e].nombre}</td>
                             <td>${catCiudad[indice_c].nombre}</td>
                             <td>${nCon(key.cp)}</td>
+                            <td>${nCon(key.claveSat)}</td>
                             <td>${nCon(key.nombre)}</td>
                             <td>`+ statusTable(key.estatus) + `</td>
                             <td>
